// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts execution definition to AFM Execution should remove empty attribute filters and not cause RAIL-2083 1`] = `
Array [
  Object {
    "positiveAttributeFilter": Object {
      "displayForm": Object {
        "identifier": Object {
          "id": "label.product.id.name",
          "type": "label",
        },
      },
      "in": Object {
        "values": Array [
          "value 1",
        ],
      },
    },
  },
  Object {
    "negativeAttributeFilter": Object {
      "displayForm": Object {
        "identifier": Object {
          "id": "label.product.id.name",
          "type": "label",
        },
      },
      "notIn": Object {
        "values": Array [
          "value 2",
        ],
      },
    },
  },
]
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with definition that has filters 1`] = `
Object {
  "execution": Object {
    "attributes": Array [
      Object {
        "displayForm": Object {
          "identifier": Object {
            "id": "label.account.id.name",
            "type": "label",
          },
        },
        "localIdentifier": "a_label.account.id.name",
      },
      Object {
        "displayForm": Object {
          "identifier": Object {
            "id": "label.activity.id.subject",
            "type": "label",
          },
        },
        "localIdentifier": "a_label.activity.id.subject",
      },
    ],
    "auxMeasures": Array [],
    "filters": Array [
      Object {
        "positiveAttributeFilter": Object {
          "displayForm": Object {
            "identifier": Object {
              "id": "label.account.id.name",
              "type": "label",
            },
          },
          "in": Object {
            "values": Array [
              "myAccount",
            ],
          },
        },
      },
    ],
    "measures": Array [
      Object {
        "definition": Object {
          "measure": Object {
            "item": Object {
              "identifier": Object {
                "id": "acugFHNJgsBy",
                "type": "metric",
              },
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    ],
  },
  "resultSpec": Object {
    "dimensions": Array [],
  },
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with definition that has no filter 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
  },
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with definition that has one attribute with alias and one attribute without localId 1`] = `
Object {
  "execution": Object {
    "attributes": Array [
      Object {
        "alias": "alias",
        "displayForm": Object {
          "identifier": Object {
            "id": "attribute1",
            "type": "label",
          },
        },
        "localIdentifier": "a_724874d1_attribute1",
      },
      Object {
        "displayForm": Object {
          "identifier": Object {
            "id": "attribute2",
            "type": "label",
          },
        },
        "localIdentifier": "a_attribute2",
      },
    ],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
  },
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with dimensions 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [
      Object {
        "itemIdentifiers": Array [
          "localId1",
        ],
        "localIdentifier": "dim_0",
      },
    ],
  },
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with empty definition 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
  },
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with sorts 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
  },
}
`;

exports[`converts execution definition to AFM Execution throw error with dimensions with native totals but no attribute in bucket 1`] = `"Tiger backend does not support totals."`;

exports[`converts execution definition to AFM Execution throw when dimension has non-native totals 1`] = `"Tiger backend does not support totals."`;
